--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<artifactId>j2html</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.8</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
