--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port = 8090
-application.formservice.baseUrl = http://admin:test@localhost:8080
+application.formservice.baseUrl = http://admin:test@192.168.1.135:8080
 application.formservice.formRepositoryURL = flowable-task/form-api/form-repository/form-definitions
 application.formservice.modelUrl = model
