--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port = 8090
-application.formservice.baseUrl = http://admin:test@localhost:8080
+application.formservice.flowable.user = admin
+application.formservice.flowable.password = test
+application.formservice.flowableUrl = http://%s:%s@localhost:8080
 application.formservice.formRepositoryURL = flowable-task/form-api/form-repository/form-definitions
 application.formservice.modelUrl = model
